--- a/package.json
+++ b/package.json
@@ -5,10 +5,28 @@
     "clean:packages": "pnpm -rp exec rm -rf node_modules && rm -rf dist",
     "clean:root": "rm -rf node_modules",
     "clean:all": "pnpm run clean:packages && pnpm run clean:root",
-    "reset": "pnpm run clean:all && pnpm i"
+    "reset": "pnpm run clean:all && pnpm i",
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_c943a0eb2bfce2e"
   },
   "devDependencies": {
-    "typescript": "*",
-    "vitest": "^0.34.1"
-  }
+    "typescript": "^5.1.6",
+    "vitest": "^0.34.1",
+    "chromatic": "^6.20.0",
+    "@storybook/addon-essentials": "^7.2.1",
+    "@storybook/addon-interactions": "^7.2.1",
+    "@storybook/addon-links": "^7.2.1",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.2.1",
+    "@storybook/react": "^7.2.1",
+    "@storybook/react-vite": "^7.2.1",
+    "@storybook/testing-library": "^0.2.0",
+    "eslint": "^8.45.0",
+    "storybook": "^7.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "version": "",
+  "readme": "ERROR: No README data found!",
+  "_id": "testing-migration-monorepo@"
 }
