--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,8 +12,8 @@
     "@types/react": "^18.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "*",
-    "@storybook/react": "*"
+    "typescript": "^5.1.6",
+    "@storybook/react": "^7.2.1"
   },
   "files": [
     "dist"
