--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean:all": "pnpm run clean:packages && pnpm run clean:root",
     "reset": "pnpm run clean:all && pnpm i",
     "build-storybook": "storybook build",
-    "chromatic": "npx chromatic --project-token=chpt_c943a0eb2bfce2e"
+    "chromatic": "chromatic --exit-zero-on-changes"
   },
   "devDependencies": {
     "typescript": "^5.1.6",
